SERVER-36794 Non-blocking $text plans with just one search term do not need an OR stage